ELS Code/main/default/objects/Campaign/fields/Book_From_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Book_From_End_Date__c</fullName>
    <label>Book From End Date</label>
    <type>Date</type>
</CustomField>