ELS Code/main/default/objects/Campaign/fields/Direct_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Direct_Revenue__c</fullName>
    <description>Direct revenue grand total of all related promotional codes of Reservations booked after the Contact was added to the Campaign. Promotional code must be identified specifically to be included.</description>
    <inlineHelpText>Direct revenue grand total of all related promotional codes of Reservations booked after the Contact was added to the Campaign. Promotional code must be identified specifically to be included.</inlineHelpText>
    <label>Direct Revenue Grand Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>