ELS Code/main/default/objects/Campaign/fields/Indirect_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Revenue__c</fullName>
    <description>Indirect revenue grand total of all related promotional codes of Reservations booked after the Contact was added to the Campaign and within 7 days of receiving the Campaign email.</description>
    <inlineHelpText>Indirect revenue grand total of all related promotional codes of Reservations booked after the Contact was added to the Campaign and within 7 days of receiving the Campaign email.</inlineHelpText>
    <label>Indirect Revenue Grand Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>