ELS Code/main/default/objects/Campaign/fields/Promo_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code_1__c</fullName>
    <label>Promo Code 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>