ELS Code/main/default/objects/Campaign/fields/Promo_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code_2__c</fullName>
    <label>Promo Code 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>