ELS Code/main/default/objects/Campaign/fields/Promo_Code_3__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code_3__c</fullName>
    <label>Promo Code 3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>