ELS Code/main/default/objects/Campaign/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <label>Promo Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>