ELS Code/main/default/objects/Campaign/fields/Promo_Codes__c.field-meta.xml
<CustomField>
    <fullName>Promo_Codes__c</fullName>
    <formula>Promo_Code_1__c &amp; &quot;,&quot; &amp; Promo_Code_2__c &amp; &quot;,&quot; &amp; Promo_Code_3__c &amp; &quot;,&quot; &amp; Promo_Code_4__c &amp; &quot;,&quot; &amp; Promo_Code_5__c &amp; &quot;,&quot; &amp; Promo_Code_6__c &amp; &quot;,&quot; &amp; Promo_Code_7__c &amp; &quot;,&quot; &amp; Promo_Code_8__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo Codes</label>
    <type>Text</type>
</CustomField>