ELS Code/main/default/objects/Campaign/fields/Total_Conversions__c.field-meta.xml
<CustomField>
    <fullName>Total_Conversions__c</fullName>
    <label>Total Conversions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>